--- a/backend/scripts/requirements.txt
+++ b/backend/scripts/requirements.txt
@@ -10,6 +10,7 @@ docx2pdf==0.1.8
 etelemetry==0.3.1
 filelock==3.18.0
 fitz==0.0.1.dev2
+greenlet==3.2.3
 httplib2==0.22.0
 idna==3.10
 isodate==0.6.1
@@ -24,6 +25,7 @@ pandas==2.2.3
 pathlib==1.0.1
 pillow==11.1.0
 prov==2.0.1
+psycopg2-binary==2.9.10
 puremagic==1.28
 pydot==3.0.4
 PyMuPDF==1.25.5
@@ -31,12 +33,14 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 pytz==2025.2
+pywin32==310
 pyxnat==1.6.3
 rdflib==6.3.2
 requests==2.32.3
 scipy==1.15.2
 simplejson==3.20.1
 six==1.17.0
+SQLAlchemy==2.0.41
 tqdm==4.67.1
 traits==7.0.2
 typing_extensions==4.12.2
