--- a/backend/scripts/requirements.txt
+++ b/backend/scripts/requirements.txt
@@ -7,6 +7,8 @@ colorama==0.4.6
 configobj==5.0.9
 configparser==7.2.0
 docx2pdf==0.1.8
+grpcio>=1.60.0
+grpcio-tools>=1.60.0
 etelemetry==0.3.1
 filelock==3.18.0
 fitz==0.0.1.dev2
